--- a/app/views/base.html
+++ b/app/views/base.html
@@ -13,16 +13,21 @@
 	<link href="http://fonts.googleapis.com/css?family=Josefin+Sans:400,700,400italic,700italic|Merriweather:400,400italic,700,700italic" rel="stylesheet" type="text/css">
 	<style type="text/css">
 	#navigation {
-		padding: 10px;
-		border-bottom: 1px solid #eee;
-		border-bottom: 1px solid rgba(0,0,0,0);
-		box-shadow: 0 0 5px -1px rgba(0,0,0,0.5);
 		position: fixed;
 		top: 0;
 		left: 0;
 		right: 0;
-		background: white;
 		z-index: 99;
+	}
+	#navigation, .navigation {
+		padding: 10px;
+		border-bottom: 1px solid #eee;
+		border-bottom: 1px solid rgba(0,0,0,0);
+		box-shadow: 0 0 5px -1px rgba(0,0,0,0.5);
+		background: white;
+	}
+	.navigation {
+		text-align: center;
 	}
 	.group {
 		display: inline-block;
@@ -541,7 +546,7 @@
 		<div class="container" style="text-align: center;">
 			<div class="alert-{{ message.type }}">{{ message.content }}</div>
 		</div>
-	</div>	
+	</div>
 	{% endfor %}
 		{% block navigation %}
 		<div id="navigation">
@@ -557,7 +562,7 @@
 						<span class="typcn typcn-news"></span>
 					</a>
 					<a class="block round navigation-item" href="/{% if draft %}editor{% else %}new{% endif %}">
-						<span class="navigation-text">{% if draft %}Continue Writing{% else %}Start a Propcott{% endif %}</span>
+						<span class="navigation-text">{% if session.draft_id %}Continue Writing{% else %}Start a Propcott{% endif %}</span>
 						<span class="typcn typcn-edit"></span>
 					</a>
 				{% endblock %}
@@ -571,7 +576,7 @@
 						{% else %}
 							<span class="dropdown">
 								<a href="/account" class="block round navigation-item">
-									<span class="navigation-text">Hi, {{ user.displayName }}</span>
+									<span class="navigation-text">Hi, {{ user.display_name }}</span>
 									{% if user.avatar %}
 									<span class="navigation-avatar" style="background-image: url('{{ session.user.avatar }}');"></span>
 									{% else %}
