--- a/app/views/propcott/create.html
+++ b/app/views/propcott/create.html
@@ -215,7 +215,7 @@ event.call(document.getElementById('propcott-form'), verb + 'submit', function()
 			<span class="typcn typcn-tick"></span>
 		</button>
 		<button class="block round navigation-item" type="submit" name="action" value="save">
-			<span class="navigation-text">Save Propcott</span>
+			<span class="navigation-text">Save</span>
 			<span class="typcn typcn-pin"></span>
 		</button>
 	</div>
