--- a/app/views/propcott/draft.html
+++ b/app/views/propcott/draft.html
@@ -74,24 +74,22 @@
 {% endblock %}
 
 {% block content %}
-{% if user.id == propcott.creator.id %}
 <div class="navigation" style="background-color: #397DD8; color: #ffffff;" data-sticky="0">
 	<div class="container">
 		<a class="block round navigation-item" href="/d/{{ propcott.draft_id }}/edit">
-			<span class="navigation-text">Edit Propcott</span>
+			<span class="navigation-text">Edit</span>
 			<span class="typcn typcn-pencil"></span>
 		</a>
 		<a class="block round navigation-item" href="/d/{{ propcott.draft_id }}/delete" onclick="return confirm('Are you sure you want to delete this propcott?');">
-			<span class="navigation-text">Delete Propcott</span>
+			<span class="navigation-text">Delete</span>
 			<span class="typcn typcn-cancel"></span>
 		</a>
 		<a class="block round navigation-item" href="/d/{{ propcott.draft_id }}/publish" onclick="return confirm('Are you sure you want to publish this propcott?');">
-			<span class="navigation-text">Publish Propcott</span>
+			<span class="navigation-text">Publish</span>
 			<span class="typcn typcn-cloud-storage"></span>
 		</a>
 	</div>
 </div>
-{% endif %}
 
 <div class="container">
 	<div class="row">
@@ -155,6 +153,8 @@
 							{% for alt in propcott.alt %}<li>{{ alt }}</li>{% endfor %}
 						</ul>
 					{% endif %}
+					
+					<p><button type="button" class="block join-button">Join!</button></p>
 				</div>
 			</div>
 		</div>
